@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
     id 'org.jetbrains.kotlin.jvm' version '1.5.10'
     id 'com.github.johnrengelman.shadow' version '6.1.0'
     id 'org.mikeneck.graalvm-native-image' version 'v1.4.1'
@@ -22,10 +22,30 @@ compileKotlin {
 
 application {
     mainClass.set(mainClassName)
+    applicationDefaultJvmArgs = [
+            "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior" +
+                    "=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior" +
+                    "=com.jfoenix",
+            "--add-exports=javafx.controls/com.sun.javafx.binding=com.jfoenix",
+            "--illegal-access=warn",
+            "--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=com.jfoenix",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior" +
+                    "=com.jfoenix",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+            "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
+            "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
+            "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix"
+    ]
 }
 
 javafx {
-    modules = ['javafx.base', 'javafx.controls', 'javafx.graphics', 'javafx.fxml', 'javafx.media' ]
+    version = '12'
+    modules = ['javafx.base', 'javafx.controls', 'javafx.graphics', 'javafx.fxml', 'javafx.media']
 }
 
 repositories {
@@ -43,6 +63,10 @@ dependencies {
     implementation 'no.tornado:tornadofx:1.7.20'
     implementation 'commons-io:commons-io:2.8.0'
     implementation 'io.github.dkim19375:dkimcore:+'
+    implementation 'com.jfoenix:jfoenix:9.0.10'
+    implementation('com.github.bkenn:kfoenix:0.1.3') {
+        exclude group: 'com.jfoenix', module: 'jfoenix'
+    }
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'me.mattstudios:triumph-config:1.0.5-SNAPSHOT'
     implementation 'com.ToxicBakery.library.bcrypt:bcrypt:+'
